--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<div class="wrapper">
 			<!-- This box contains the large image and text first seen on page-->
 			<div class="box1">
-				<p>This will be an image</p>
 				<h1>Skinclusive<br>inclusive of your skin.</h1>
+				<a href="#">Take the quiz now  ></a>
 			</div>
 			
 			<!-- This box contains the main text on the screen when you scroll down-->
@@ -24,18 +24,23 @@
 			
 			<!-- This is the individual text box-->
 			<div class="subtitle">
-				<p>Where to start?</p>
+				<p>Browse our top articles</p>
 			</div>
-			
-			<!-- These are the boxes containing the two images side by side -->
-			<div class="left">
-				<p>This will be an image</p>
-				<p>This box will have buttons and text</p>
-			</div>
-			
-			<div class="right">
-				<p>This will be an image</p>
-				<p>This box will have buttons and text</p>
+
+			<div class="similar">
+				<!-- Flexbox to divide the three recommended articles easier-->
+				<div class="flex-container">
+					<div class="flex-child"><p>Image will go here</p></div>
+					<div class="flex-child"><p>Image will go here</p></div>
+					<div class="flex-child"><p>Image will go here</p></div>
+				</div>
+				
+				<!-- Flexbox to divide text evenly -->
+				<div class="flex-container2">
+					<div class="flex-child2"><p>Article title</p></div>
+					<div class="flex-child2"><p>Article title</p></div>
+					<div class="flex-child2"><p>Article title</p></div>
+				</div>
 			</div>
 
 		</div>
