--- a/quiz.html
+++ b/quiz.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Skin type Quiz</title>
+		<title>Skin Type Quiz</title>
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 
@@ -11,33 +11,29 @@
 		</header>
 		
 		<div class="wrapper">
+			<div class="quiz-page">
+				<h1>Skin Type Quiz</h1>
 
-			<!-- This div is for the skin type quiz and is different to the other pages -->
-			<div class="quizbox">
-				<h1>Question 1 heading</h1>
-				<h2>1 / 5</h2>
-				<p>Question related images and text will go here</p>
-				<hr color="white" width="80%" size="3">
+				<!-- This div is for the skin type quiz and is different to the other pages -->
+				<div class="quizbox">
+					<h1>Question 1 heading</h1>
+					<p>Question related images and text will go here</p>
 
-				<h1>Question 2 heading</h1>
-				<h2>2 / 5</h2>
-				<p>Question related images and text will go here</p>
-				<hr color="white" width="80%" size="3">
+					<!-- Next button NOTE: not available on question 5 -->
+					<div class="next">
+						<a href="#">&#5171;&#5171;</a>
+					</div>
 
-				<h1>Question 3 heading</h1>
-				<h2>3 / 5</h2>
-				<p>Question related images and text will go here</p>
-				<hr color="white" width="80%" size="3">
+					<h2>1 / 5</h2>
 
-				<h1>Question 4 heading</h1>
-				<h2>4 / 5</h2>
-				<p>Question related images and text will go here</p>
-				<hr color="white" width="80%" size="3">
+					<!-- Back button NOTE: will only be available on question 2-5 -->
+					<div class="prev">
+						<a href="#">&#5176;&#5176;</a>
+					</div>
 
-				<h1>Question 5 heading</h1>
-				<h2>5 / 5</h2>
-				<p>Question related images and text will go here</p>
+					<hr color="white" width="80%" size="3">
 
+				</div>
 			</div>
 		</div>
 
