--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<div class="wrapper">
 			<!-- This box contains the large image and text first seen on page-->
 			<div class="box1">
+				<p>This will be an image</p>
 				<h1>Skinclusive<br>inclusive of your skin.</h1>
-				<a href="#">Take the quiz now  ></a>
 			</div>
 			
 			<!-- This box contains the main text on the screen when you scroll down-->
@@ -22,6 +22,22 @@
 				<p>Text will go here</p>
 			</div>
 			
+			<!-- This is the individual text box-->
+			<div class="subtitle">
+				<p>Where to start?</p>
+			</div>
+			
+			<!-- These are the boxes containing the two images side by side -->
+			<div class="left">
+				<p>This will be an image</p>
+				<p>This box will have buttons and text</p>
+			</div>
+			
+			<div class="right">
+				<p>This will be an image</p>
+				<p>This box will have buttons and text</p>
+			</div>
+
 			<!-- This is the individual text box-->
 			<div class="subtitle">
 				<p>Browse our top articles</p>
