--- a/all-products.html
+++ b/all-products.html
@@ -11,6 +11,8 @@
 		</header>
 		
 		<div class="wrapper">
+			
+			<!-- This div is for the products on the page-->
 			<div class="products">
                 <h1>All Products</h1>
 
