--- a/products-2.html
+++ b/products-2.html
@@ -125,12 +125,12 @@
                 </div> 
 
                 <div class="nav-buttons">
-                     <!--Previous-->
-                     <a href="#" class="page1">&#5176;&#5176;</a>
+                    <!--Previous-->
+                        <a href="all-products.html">&#5176;&#5176;</a>
 
                     <!--Next-->
-                    <a href="products-2.html">&#5171;&#5171;</a>
-                    <p>Page 1</p>
+                    <a href="#">&#5171;&#5171;</a>
+                    <p>Page 2</p>
                     
                 </div>
                
