--- a/quiz.html
+++ b/quiz.html
@@ -36,7 +36,7 @@
 			<div class="quiz-page">
 				<h1>Skin Type Quiz</h1>
 
-				<!-- This div is for the skin type quiz and is different to the other pages -->
+				<!-- This form is for the skin type quiz and is different to the other pages -->
 				<form name="quiz" id="quiz">
 					<div>
 						<h1>How does your skin typically feel throughout the day?</h1>
