--- a/quiz.html
+++ b/quiz.html
@@ -102,9 +102,11 @@
 		
 				</form>
 
+				<!-- This div is hidden until user clicks submit button -->
 				<div id="yourresult">
 					<p id="resulthead"></p>
 					<p id="result"></p>
+					<a id="redirect"></a>
 				</div>
 
 				</div>
