--- a/quiz.html
+++ b/quiz.html
@@ -46,7 +46,7 @@
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question1" value="Dry">Dry</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question1" value="Normal">Normal</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question1" value="Sensitive">Sensitive</p></div>
-							<hr color="white" width="80%" size="3">
+							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
@@ -58,7 +58,7 @@
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question2" value="Dry">Dry</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question2" value="Normal">Normal</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question2" value="Sensitive">Sensitive</p></div>
-							<hr color="white" width="80%" size="3">
+							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
@@ -70,7 +70,7 @@
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question3" value="Dry">Dry</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question3" value="Normal">Normal</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question3" value="Sensitive">Sensitive</p></div>
-							<hr color="white" width="80%" size="3">
+							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
@@ -82,7 +82,7 @@
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question4" value="Dry">Dry</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question4" value="Normal">Normal</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question4" value="Sensitive">Sensitive</p></div>
-							<hr color="white" width="80%" size="3">
+							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
@@ -94,7 +94,7 @@
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question5" value="Dry">Dry</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question5" value="Normal">Normal</p></div>
 							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question5" value="Sensitive">Sensitive</p></div>
-							<hr color="white" width="80%" size="3">
+							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
