--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 		<div class="wrapper">
 			<!-- This box contains the large image and text first seen on page -->
 			<div class="box1">
-				<h1>Skinclusive<br>inclusive of your skin.</h1>
+				<h1>Skinclusive</h1>
+				<h2>inclusive of your skin.</h2>
 			</div>
 			
 			<!-- This box contains the main text on the screen when you scroll down-->
