--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<p>Browse our top articles</p>
 			</div>
 
-			<div class="similar">
+			<div class="index-similar">
 				<!-- Flexbox to divide the three recommended articles easier-->
 				<div class="flex-container">
 					<div class="flex-child"><p>Image will go here</p></div>
