--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
 			<a href="index.html" class="logo">Skinclusive</a>
 			<nav name="top">
 				<ul>
-					<li><a href="quiz.html">skin type quiz</a></li>
+					<li><a href="quiz.html" class="current">skin type quiz</a></li>
 					<li class="dropdown"><a href="all-products.html">products &#9662;</a>
 						<div class="dropdown-content">
 							<a href="#">oily skin products</a>
@@ -39,61 +39,61 @@
 				<!-- This form is for the skin type quiz and is different to the other pages -->
 				<form name="quiz" id="quiz">
 					<div>
-						<h1>How does your skin typically feel throughout the day?</h1>
+						<h1>How does your skin typically feel in the morning?</h1>
 						<h2>1 / 5</h2>
 						<div class="choices">
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question1" value="Oily">Oily</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question1" value="Dry">Dry</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question1" value="Normal">Normal</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question1" value="Sensitive">Sensitive</p></div>
+							<div class="choicebox"><img src="images/oily.png"><p><input type="radio" name="question1" value="Oily">Oily</p></div>
+							<div class="choicebox"><img src="images/dry.png"><p><input type="radio" name="question1" value="Dry">Dry</p></div>
+							<div class="choicebox"><img src="images/normal.png"><p><input type="radio" name="question1" value="Normal">Normal</p></div>
+							<div class="choicebox"><img src="images/sensitive.png"><p><input type="radio" name="question1" value="Sensitive">Sensitive</p></div>
 							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
 					<div>
-						<h1>Lorem ipsum</h1>
+						<h1>How does your skin typically feel at the end of the day?</h1>
 						<h2>2 / 5</h2>
 						<div class="choices">
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question2" value="Oily">Oily</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question2" value="Dry">Dry</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question2" value="Normal">Normal</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question2" value="Sensitive">Sensitive</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question2" value="Oily">Super oily as if my pores were clogged</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question2" value="Dry">Super dry and flaky as if I need moisturiser</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question2" value="Normal">It feels completely fine, maybe a bit oily</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question2" value="Sensitive">It feels sore and it's red, maybe a bit flaky</p></div>
 							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
 					<div>
-						<h1>Lorem ipsum</h1>
+						<h1>When washing your face, how does it usually feel after 15 minutes?</h1>
 						<h2>3 / 5</h2>
 						<div class="choices">
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question3" value="Oily">Oily</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question3" value="Dry">Dry</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question3" value="Normal">Normal</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question3" value="Sensitive">Sensitive</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question3" value="Oily">It feels oily again</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question3" value="Dry">It's dry and feels tight</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question3" value="Normal">It feels perfectly fine</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question3" value="Sensitive">It's sore and a bit tight</p></div>
 							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
 					<div>
-						<h1>Lorem ipsum</h1>
+						<h1>Which option best describes the appearance of your pores?</h1>
 						<h2>4 / 5</h2>
 						<div class="choices">
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question4" value="Oily">Oily</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question4" value="Dry">Dry</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question4" value="Normal">Normal</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question4" value="Sensitive">Sensitive</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question4" value="Oily">Extremely large and visible</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question4" value="Normal">Medium sized</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question4" value="Dry">Not really noticeable</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question4" value="Oily">Quite visible in the T-zone</p></div>
 							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
 		
 					<div>
-						<h1>Lorem ipsum</h1>
+						<h1>Which option best describes the appearance of your skin?</h1>
 						<h2>5 / 5</h2>
 						<div class="choices">
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question5" value="Oily">Oily</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question5" value="Dry">Dry</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question5" value="Normal">Normal</p></div>
-							<div class="choicebox"><div class="placeholder"></div><p><input type="radio" name="question5" value="Sensitive">Sensitive</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question5" value="Oily">It's very shiny all over</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question5" value="Dry">It looks dull and flaky</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question5" value="Normal">It's not shiny and isn't flaky</p></div>
+							<div class="choicebox-text"><p><input type="radio" name="question5" value="Sensitive">It's quite red, especially on the cheeks</p></div>
 							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
