--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<div class="wrapper">
 			<!-- This box contains the large image and text first seen on page -->
 			<div class="box1">
+				<img src="images/index_large.jpg">
 				<h1>Skinclusive</h1>
 				<h2>inclusive of your skin.</h2>
 			</div>
@@ -56,12 +57,14 @@
 			
 			<!-- These are the boxes containing the two images side by side -->
 			<div class="left">
+				<img src="images/skinquiz.jpg">
 				<h1>New to skincare?</h1>
 				<p>Find out your skin type here</p>
 				<a href="quiz.html">TAKE THE QUIZ</a>
 			</div>
 			
 			<div class="right">
+				<img src="images/skinconcern.jpeg">
 				<h1>Have a skin concern?</h1>
 				<p>Read more articles about common skin issues here</p>
 				<a href="article-list.html">SKINCARE ARTICLES</a>
@@ -69,7 +72,7 @@
 
 			<!-- This is the individual text box-->
 			<div class="subtitle">
-				<p>Browse our top articles</p>
+				<p>Browse our recommended articles</p>
 			</div>
 
 			<div class="similar">
