--- a/all-products.html
+++ b/all-products.html
@@ -11,7 +11,7 @@
 			<nav name="top">
 				<ul>
 					<li><a href="quiz.html">skin type quiz</a></li>
-					<li class="dropdown"><a href="all-products.html">products &#9662;</a>
+					<li class="dropdown"><a href="all-products.html" class="current">products &#9662;</a>
 						<div class="dropdown-content">
 							<a href="#">oily skin products</a>
 							<a href="#">dry skin products</a>
