--- a/article.html
+++ b/article.html
@@ -19,7 +19,7 @@
 							<a href="#">sensitive skin products</a>
 						</div>
 					</li>
-					<li class="dropdown"><a href="article-list.html">articles &#9662;</a>
+					<li class="dropdown"><a href="article-list.html" class="current">articles &#9662;</a>
 						<div class="dropdown-content">
 							<a href="#">oily skin articles</a>
 							<a href="#">dry skin articles</a>
