--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 					<li><a href="quiz.html">skin type quiz</a></li>
 					<li class="dropdown"><a href="all-products.html">products &#9662;</a>
 						<div class="dropdown-content">
-							<a href="#">oily skin products</a>
-							<a href="#">dry skin products</a>
-							<a href="#">combo skin products</a>
-							<a href="#">sensitive skin products</a>
+							<a href="all-products.html">oily skin products</a>
+							<a href="products-2.html">dry skin products</a>
+							<a href="products-3.html">combo skin products</a>
+							<a href="products-4.html">sensitive skin products</a>
 						</div>
 					</li>
 					<li class="dropdown"><a href="article-list.html">articles &#9662;</a>
 						<div class="dropdown-content">
-							<a href="#">oily skin articles</a>
-							<a href="#">dry skin articles</a>
-							<a href="#">combo skin articles</a>
-							<a href="#">sensitive skin articles</a>
+							<a href="article-list.html">oily skin articles</a>
+							<a href="articles-2.html">dry skin articles</a>
+							<a href="articles-3.html">combo skin articles</a>
+							<a href="articles-4.html">sensitive skin articles</a>
 						</div>
 					</li>
 				</ul>
@@ -78,15 +78,15 @@
 			<div class="similar">
 				<!-- Flexbox to divide the three recommended articles easier-->
 				<div class="flex-container">
-					<div class="flex-child"></div>
-					<div class="flex-child"></div>
+					<div class="flex-child"><img src="images/fungal_acne.jpg"></div>
+					<div class="flex-child"><img src="images/acne.png"></div>
 					<div class="flex-child"></div>
 				</div>
 				
 				<!-- Flexbox to divide text evenly -->
 				<div class="flex-container2">
-					<div class="flex-child2"><a href="#">Article title</a></div>
-					<div class="flex-child2"><a href="#">Article title</a></div>
+					<div class="flex-child2"><a href="fungal-acne.html">What is Fungal Acne? (And how to treat it)</a></div>
+					<div class="flex-child2"><a href="clear-acne.html">The Best Products for Clearing Acne</a></div>
 					<div class="flex-child2"><a href="#">Article title</a></div>
 				</div>
 			</div>
