--- a/products-2.html
+++ b/products-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>All Products</title>
+		<title>Dry Skin Products</title>
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 
@@ -13,18 +13,18 @@
 					<li><a href="quiz.html">skin type quiz</a></li>
 					<li class="dropdown"><a href="all-products.html" class="current">products &#9662;</a>
 						<div class="dropdown-content">
-							<a href="#">oily skin products</a>
-							<a href="#">dry skin products</a>
-							<a href="#">combo skin products</a>
-							<a href="#">sensitive skin products</a>
+							<a href="all-products.html">oily skin products</a>
+							<a href="products-2.html">dry skin products</a>
+							<a href="products-3.html">combo skin products</a>
+							<a href="products-4.html">sensitive skin products</a>
 						</div>
 					</li>
 					<li class="dropdown"><a href="article-list.html">articles &#9662;</a>
 						<div class="dropdown-content">
-							<a href="#">oily skin articles</a>
-							<a href="#">dry skin articles</a>
-							<a href="#">combo skin articles</a>
-							<a href="#">sensitive skin articles</a>
+							<a href="article-list.html">oily skin articles</a>
+							<a href="articles-2.html">dry skin articles</a>
+							<a href="articles-3.html">combo skin articles</a>
+							<a href="articles-4.html">sensitive skin articles</a>
 						</div>
 					</li>
 				</ul>
@@ -129,7 +129,7 @@
                         <a href="all-products.html">&#5176;&#5176;</a>
 
                     <!--Next-->
-                    <a href="#">&#5171;&#5171;</a>
+                    <a href="products-3.html">&#5171;&#5171;</a>
                     <p>Page 2</p>
                     
                 </div>
