--- a/quiz.html
+++ b/quiz.html
@@ -14,18 +14,18 @@
 					<li><a href="quiz.html" class="current">skin type quiz</a></li>
 					<li class="dropdown"><a href="all-products.html">products &#9662;</a>
 						<div class="dropdown-content">
-							<a href="#">oily skin products</a>
-							<a href="#">dry skin products</a>
-							<a href="#">combo skin products</a>
-							<a href="#">sensitive skin products</a>
+							<a href="all-products.html">oily skin products</a>
+							<a href="products-2.html">dry skin products</a>
+							<a href="products-3.html">combo skin products</a>
+							<a href="products-4.html">sensitive skin products</a>
 						</div>
 					</li>
 					<li class="dropdown"><a href="article-list.html">articles &#9662;</a>
 						<div class="dropdown-content">
-							<a href="#">oily skin articles</a>
-							<a href="#">dry skin articles</a>
-							<a href="#">combo skin articles</a>
-							<a href="#">sensitive skin articles</a>
+							<a href="article-list.html">oily skin articles</a>
+							<a href="articles-2.html">dry skin articles</a>
+							<a href="articles-3.html">combo skin articles</a>
+							<a href="articles-4.html">sensitive skin articles</a>
 						</div>
 					</li>
 				</ul>
@@ -42,10 +42,10 @@
 						<h1>How does your skin typically feel in the morning?</h1>
 						<h2>1 / 5</h2>
 						<div class="choices">
-							<div class="choicebox"><img src="images/oily.png"><p><input type="radio" name="question1" value="Oily">Oily</p></div>
-							<div class="choicebox"><img src="images/dry.png"><p><input type="radio" name="question1" value="Dry">Dry</p></div>
-							<div class="choicebox"><img src="images/normal.png"><p><input type="radio" name="question1" value="Normal">Normal</p></div>
-							<div class="choicebox"><img src="images/sensitive.png"><p><input type="radio" name="question1" value="Sensitive">Sensitive</p></div>
+							<div class="choicebox"><img src="images/quiz/oily.png"><p><input type="radio" name="question1" value="Oily">Oily</p></div>
+							<div class="choicebox"><img src="images/quiz/dry.png"><p><input type="radio" name="question1" value="Dry">Dry</p></div>
+							<div class="choicebox"><img src="images/quiz/normal.png"><p><input type="radio" name="question1" value="Normal">Normal</p></div>
+							<div class="choicebox"><img src="images/quiz/sensitive.png"><p><input type="radio" name="question1" value="Sensitive">Sensitive</p></div>
 							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
