--- a/clear-acne.html
+++ b/clear-acne.html
@@ -11,9 +11,9 @@
 			<nav name="top">
 				<ul>
 					<li><a href="quiz.html">skin type quiz</a></li>
-					<li class="dropdown"><a href="all-products.html">products &#9662;</a>
+					<li class="dropdown"><a href="products-1.html">products &#9662;</a>
 						<div class="dropdown-content">
-							<a href="all-products.html">oily skin products</a>
+							<a href="products-1.html">oily skin products</a>
 							<a href="products-2.html">dry skin products</a>
 							<a href="products-3.html">combo skin products</a>
 							<a href="products-4.html">sensitive skin products</a>
@@ -21,7 +21,7 @@
 					</li>
 					<li class="dropdown"><a href="article-list.html" class="current">articles &#9662;</a>
 						<div class="dropdown-content">
-							<a href="article-list.html">oily skin articles</a>
+							<a href="articles-1.html">oily skin articles</a>
 							<a href="articles-2.html">dry skin articles</a>
 							<a href="articles-3.html">combo skin articles</a>
 							<a href="articles-4.html">sensitive skin articles</a>
@@ -35,7 +35,7 @@
             <!-- This div is for the template for all articles -->
             <div class="article">
                 <h1>The Best Products for Clearing Acne</h1>
-                <h2>Skinclusive | 14/09/2021</h2>
+                <h2>Skinclusive | 17/09/2021</h2>
 
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/yvqgEfUP8uY" frameborder="0" allowfullscreen></iframe>
@@ -118,14 +118,14 @@
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
                     <div class="flex-child"><img src="images/fungal_acne.jpg"></div>
-                    <div class="flex-child"><img src="sample.png"></div>
+                    <div class="flex-child"><img src="images/clear-oily-skin.jpg"></div>
                     <div class="flex-child"><img src="sample.png"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
                 <div class="flex-container2">
                     <div class="flex-child2"><a href="fungal-acne.html">What is Fungal Acne? (And how to treat it)</a></div>
-                    <div class="flex-child2"><a href="#">Article title</a></div>
+                    <div class="flex-child2"><a href="clear-oily-skin.html">The Best Products for Oily Skin</a></div>
                     <div class="flex-child2"><a href="#">Article title</a></div>
                 </div>
 
