--- a/quiz.html
+++ b/quiz.html
@@ -12,17 +12,17 @@
 			<nav name="top">
 				<ul>
 					<li><a href="quiz.html" class="current">skin type quiz</a></li>
-					<li class="dropdown"><a href="all-products.html">products &#9662;</a>
+					<li class="dropdown"><a href="products-1.html">products &#9662;</a>
 						<div class="dropdown-content">
-							<a href="all-products.html">oily skin products</a>
+							<a href="products-1.html">oily skin products</a>
 							<a href="products-2.html">dry skin products</a>
 							<a href="products-3.html">combo skin products</a>
 							<a href="products-4.html">sensitive skin products</a>
 						</div>
 					</li>
-					<li class="dropdown"><a href="article-list.html">articles &#9662;</a>
+					<li class="dropdown"><a href="articles-1.html">articles &#9662;</a>
 						<div class="dropdown-content">
-							<a href="article-list.html">oily skin articles</a>
+							<a href="articles-1.html">oily skin articles</a>
 							<a href="articles-2.html">dry skin articles</a>
 							<a href="articles-3.html">combo skin articles</a>
 							<a href="articles-4.html">sensitive skin articles</a>
