--- a/products-3.html
+++ b/products-3.html
@@ -19,7 +19,7 @@
 							<a href="products-4.html">sensitive skin products</a>
 						</div>
 					</li>
-					<li class="dropdown"><a href="article-list.html">articles &#9662;</a>
+					<li class="dropdown"><a href="articles-1.html">articles &#9662;</a>
 						<div class="dropdown-content">
 							<a href="articles-1.html">oily skin articles</a>
 							<a href="articles-2.html">dry skin articles</a>
