--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<img src="images/skinconcern.jpeg">
 				<h1>Have a skin concern?</h1>
 				<p>Read more articles about common skin issues here</p>
-				<a href="article-list.html">SKINCARE ARTICLES</a>
+				<a href="articles-1.html">SKINCARE ARTICLES</a>
 			</div>
 
 			<!-- This is the individual text box-->
