--- a/articles-1.html
+++ b/articles-1.html
@@ -34,7 +34,7 @@
 		<div class="wrapper">
             <!-- This div is for the list of articles on the page -->
             <div class="article-list">
-                <h1>All Articles</h1>
+                <h1>Skincare Articles</h1>
 
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles about common skin questions</p>
@@ -57,7 +57,7 @@
 				<p class="subheading">Read articles dedicated to oily skin</p>
 
 				<div class="image-first">
-					<a href="clear-oily-skin.html"><img src="images/clear-oily-skin.jpg"></a>
+					<a href="clear-oily-skin.html"><img src="images/oily/clear-oily-skin.jpg"></a>
 					
 				</div>
 				<div class="title">
@@ -66,7 +66,7 @@
 				</div>
 
 				<div class="image">
-					<a href="moisturising-oily-skin.html"><img src="images/moisturising-oily-skin.jpg"></a>
+					<a href="moisturising-oily-skin.html"><img src="images/oily/moisturising-oily-skin.jpg"></a>
 					
 				</div>
 				<div class="title">
