--- a/articles-2.html
+++ b/articles-2.html
@@ -34,32 +34,25 @@
 		<div class="wrapper">
             <!-- This div is for the list of articles on the page -->
             <div class="article-list">
-                <h1>All Articles</h1>
+				<h1>Skincare Articles</h1>
 
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles dedicated to dry skin</p>
 				<div class="image-first">
-					<a href="#"><img src="sample.png"></a>
+					<a href="dehydrated-vs-dry.html"><img src="images/dry/dehydrated-vs-dry.jpg"></a>
 				</div>
 				<div class="title">
-					<a href="#">Article title will go here</a>
+					<a href="dehydrated-vs-dry.html" class="first">Dehydrated vs Dry Skin (And how to treat dehydrated skin)</a>
+					<p>Dehydrated and dry skin, what's the difference? Click to read more</p>
 				</div>
 
 				<div class="image">
-					<a href="#"><img src="sample.png"></a>
+					<a href="help-dry-skin.html"><img src="images/dry/help-dry-skin.jpg"></a>
 					
 				</div>
 				<div class="title">
-					<a href="#">Article title will go here</a>
-
-				</div>
-
-				<div class="image">
-					<a href="#"><img src="sample.png"></a>
-					
-				</div>
-				<div class="title">
-					<a href="#">Article title will go here</a>
+					<a href="help-dry-skin.html">The Best Products for Dry Skin</a>
+					<p>Learn what some of the best products are out there for dry skin</p>
 
 				</div>
 
