--- a/articles-3.html
+++ b/articles-3.html
@@ -34,24 +34,15 @@
 		<div class="wrapper">
             <!-- This div is for the list of articles on the page -->
             <div class="article-list">
-                <h1>All Articles</h1>
-
+                <h1>Skincare Articles</h1>
+                
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles dedicated to combo skin</p>
 				<div class="image-first">
 					<a href="#"><img src="sample.png"></a>
 				</div>
 				<div class="title">
-					<a href="#">Article title will go here</a>
-				</div>
-
-				<div class="image">
-					<a href="#"><img src="sample.png"></a>
-					
-				</div>
-				<div class="title">
-					<a href="#">Article title will go here</a>
-
+					<a href="#" class="first">Article title will go here</a>
 				</div>
 
 				<div class="image">
