--- a/fungal-acne.html
+++ b/fungal-acne.html
@@ -75,15 +75,15 @@
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
                     <div class="flex-child"><img src="images/acne.png"></div>
-                    <div class="flex-child"><img src="images/clear-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="sample.png"></div>
+                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
                 <div class="flex-container2">
                     <div class="flex-child2"><a href="clear-acne.html">The Best Products for Clearing Acne</a></div>
                     <div class="flex-child2"><a href="clear-oily-skin.html">The Best Products for Oily Skin</a></div>
-                    <div class="flex-child2"><a href="#">Article title</a></div>
+                    <div class="flex-child2"><a href="help-dry-skin.html">The Best Products for Dry Skin</a></div>
                 </div>
 
                 
