--- a/moisturising-oily-skin.html
+++ b/moisturising-oily-skin.html
@@ -49,7 +49,7 @@
 				</p>
 
 				<div class="content-image">
-					<img src="images/fa_coconutcream.png">
+					<img src="images/oily/fa_coconutcream.png">
 				</div>
 
 				<p>So now you've found out your skin type, and the next thing is to find the right moisturiser. For oily skin types,
@@ -82,15 +82,15 @@
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
                     <div class="flex-child"><img src="images/acne.png"></div>
-                    <div class="flex-child"><img src="images/clear-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="sample.png"></div>
+                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/dry/dehydrated-vs-dry.jpg"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
                 <div class="flex-container2">
                     <div class="flex-child2"><a href="clear-acne.html">The Best Products for Clearing Acne</a></div>
-                    <div class="flex-child2"><a href="clear-oily-skin.html">Products for Oily Skin</a></div>
-                    <div class="flex-child2"><a href="#">Article title</a></div>
+                    <div class="flex-child2"><a href="clear-oily-skin.html">The Best Products for Oily Skin</a></div>
+                    <div class="flex-child2"><a href="dehydrated-vs-dry.html">Dehydrated vs Dry Skin (And how to treat dehydrated skin)</a></div>
                 </div>
 
                 
