--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<div class="flex-container">
 					<div class="flex-child"><img src="images/fungal_acne.jpg"></div>
 					<div class="flex-child"><img src="images/acne.png"></div>
-					<div class="flex-child"><img src="images/clear-oily-skin.jpg"></div>
+					<div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
 				</div>
 				
 				<!-- Flexbox to divide text evenly -->
