--- a/articles-3.html
+++ b/articles-3.html
@@ -39,18 +39,23 @@
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles dedicated to combo skin</p>
 				<div class="image-first">
-					<a href="#"><img src="sample.png"></a>
+					<a href="combo-skin-tips.html"><img src="images/combo/combo-skin-tips.jpg"></a>
 				</div>
 				<div class="title">
-					<a href="#" class="first">Article title will go here</a>
+					<a href="combo-skin-tips.html" class="first">Tips for Combination Type Skin</a>
+					<p>Is your combination type skin difficult to manage? Learn some tips that may make your skin
+						care routine easier
+					</p>
+
 				</div>
 
 				<div class="image">
-					<a href="#"><img src="sample.png"></a>
+					<a href="choosing-cleanser.html"><img src="images/combo/choosing-cleanser.jpg"></a>
 					
 				</div>
 				<div class="title">
-					<a href="#">Article title will go here</a>
+					<a href="choosing-cleanser.html">Choosing the Right Cleanser</a>
+					<p>Choosing a cleanser for oily AND dry skin can be difficult! Learn some tips to picking the right cleanser</p>
 
 				</div>
 
