--- a/articles-3.html
+++ b/articles-3.html
@@ -44,8 +44,7 @@
 				<div class="title">
 					<a href="combo-skin-tips.html" class="first">Tips for Combination Type Skin</a>
 					<p>Is your combination type skin difficult to manage? Learn some tips that may make your skin
-						care routine easier
-					</p>
+						care routine easier</p>
 
 				</div>
 
