--- a/articles-4.html
+++ b/articles-4.html
@@ -39,18 +39,23 @@
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles dedicated to sensitive skin</p>
 				<div class="image-first">
-					<a href="#"><img src="sample.png"></a>
+					<a href="tips-for-sensitive-skin.html"><img src="images/sensitive/tips-for-sensitive-skin.jpg"></a>
 				</div>
 				<div class="title">
-					<a href="#" class="first">Article title will go here</a>
+					<a href="tips-for-sensitive-skin.html" class="first">Tips for Sensitive Skin</a>
+					<p>Sensitive skin can be very difficult to manage. Learn some tips to help make your skin a little more manageable</p>
+
 				</div>
 
 				<div class="image">
-					<a href="#"><img src="sample.png"></a>
+					<a href="help-sensitive-skin.html"><img src="images/sensitive/help-sensitive-skin.jpg"></a>
 					
 				</div>
 				<div class="title">
-					<a href="#">Article title will go here</a>
+					<a href="help-sensitive-skin.html">The Best Products for Sensitive Skin</a>
+					<p>Finding good products that won't irritate your skin can be difficult! Click to learn some of the best products for
+						sensitive skin
+					</p>
 
 				</div>
 
