--- a/products-1.html
+++ b/products-1.html
@@ -33,93 +33,67 @@
 		
 		<div class="wrapper">
 			<div class="products">
-                <h1>All Products</h1>
+                <h1>Skincare Products</h1>
+                <p class="subheading">Products for oily skin</p>
 
                 <div class="container">
+
                     <!-- Each product-box div is a product, but this row specifically
                     has a thicker top box line -->
                     <div class="top-row">
                         <div class="product-box" id="first">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://www.farmers.co.nz/the-ordinary-niacinamide-10-zinc-1-30ml-6394630"><img src="images/oily/to_niacinamide_large.jpg"></a></div>
+                            <a class="h2" href="https://www.farmers.co.nz/the-ordinary-niacinamide-10-zinc-1-30ml-6394630">The Ordinary 10% Niacinamide Serum + Zinc</a>
+                            <p>$12.80 NZD</p>
                         </div>
 
                         <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                        </div>
-
-                        <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://www.sephora.nz/products/first-aid-beauty-coconut-water-cream/v/default"><img src="images/oily/fa_coconutcream.jpeg"></a></div>
+                            <a class="h2" href="https://www.sephora.nz/products/first-aid-beauty-coconut-water-cream/v/default">First Aid Beauty Coconut Water Cream</a>
+                            <p>$63 NZD</p>
 
                         </div>
 
                         <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://nz.iherb.com/pr/some-by-mi-aha-bha-pha-30-days-miracle-cream-60-g/95241"><img src="images/oily/sbm_miraclecream_large.jpg"></a></div>
+                            <a class="h2" href="https://nz.iherb.com/pr/some-by-mi-aha-bha-pha-30-days-miracle-cream-60-g/95241">Some By Mi AHA/BHA/PHA Miracle Cream</a>
+                            <p>$28.60 NZD</p>
+
+                        </div>
+
+                        <div class="product-box">
+                            <div class="image"><a href="https://amp.ladybonita.co.nz/products/purito-comfy-water-sun-block-spf50-pa"><img src="images/oily/purito_sunblock_large.jpg"></a></div>
+                            <a class="h2" href="https://amp.ladybonita.co.nz/products/purito-comfy-water-sun-block-spf50-pa">Purito Comfy Water Sun Block</a>
+                            <p>$29.99 NZD</p>
 
                         </div>
                     </div>
 
                     <div class="product-box" id="first">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.beautifiedyou.com/la-roche-posay-toleriane-purifying-foaming-cleanser/"><img src="images/oily/lrp_tolerianecleanser.jpg"></a></div>
+                            <a class="h2" href="https://www.beautifiedyou.com/la-roche-posay-toleriane-purifying-foaming-cleanser/">La-Roche Posay Toleriane Purifying Wash</a>
+                            <p>$22 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.amazon.com/Inkey-List-Salicylic-Acid-Cleanser/dp/B07X4G39YM"><img src="images/oily/til_salicyliccleanser.jpeg"></a></div>
+                            <a class="h2" href="https://www.amazon.com/Inkey-List-Salicylic-Acid-Cleanser/dp/B07X4G39YM">The Inkey List Salicylic Acid Cleanser</a>
+                            <p>$19.49 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.desertcart.nz/products/160695796-niacinamide-serum-12-plus-zinc-2-1-oz-from-naturium"><img src="images/oily/nat_niacinamide.jpg"></a></div>
+                            <a class="h2" href="https://www.desertcart.nz/products/160695796-niacinamide-serum-12-plus-zinc-2-1-oz-from-naturium">Naturium Niacinamide 12% Serum</a>
+                            <p>$35 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box" id="first">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                        <a class="h2" href="#">Product name</a>
-                        <p>Price</p>
+                        <div class="image"><a href="https://www.paulaschoice.com.au/skin-perfecting-2pct-bha-liquid-exfoliant/201.html"><img src="images/oily/pc_bhaexfoliant.jpg"></a></div>
+                            <a class="h2" href="https://www.paulaschoice.com.au/skin-perfecting-2pct-bha-liquid-exfoliant/201.html">Paula's Choice 2% BHA Liquid Exfoliant</a>
+                            <p>$38 AUD</p>
 
                     </div>
                 </div> 
@@ -135,7 +109,6 @@
                 </div>
                
             </div>
-
 		</div>
 
 		<footer>
