--- a/products-2.html
+++ b/products-2.html
@@ -33,93 +33,66 @@
 		
 		<div class="wrapper">
 			<div class="products">
-                <h1>All Products</h1>
+                <h1>Skincare Products</h1>
+                <p class="subheading">Products for dry skin</p>
 
                 <div class="container">
                     <!-- Each product-box div is a product, but this row specifically
                     has a thicker top box line -->
                     <div class="top-row">
                         <div class="product-box" id="first">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://www.amazon.com/Skinfix-Barrier-Triple-Lipid-Peptide-Cream/dp/B0935MHZ1K"><img src="images/dry/sf_triplelipid.jpeg"></a></div>
+                            <a class="h2" href="https://www.amazon.com/Skinfix-Barrier-Triple-Lipid-Peptide-Cream/dp/B0935MHZ1K">SkinFix Barrier + Lipid-Peptide Cream</a>
+                            <p>$85 NZD</p>
                         </div>
 
                         <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                        </div>
-
-                        <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://shopcosmetis.com/nz/vichy-mineral-89-serum-booster-50ml.html"><img src="images/dry/vichy_mineralserum.jpeg"></a></div>
+                            <a class="h2" href="https://shopcosmetis.com/nz/vichy-mineral-89-serum-booster-50ml.html">Vichy Mineral 89 Serum</a>
+                            <p>$19.80 NZD</p>
 
                         </div>
 
                         <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://www.yesstyle.com/en/beauty-of-joseon-calming-serum-30ml/info.html/pid.1089210993"><img src="images/dry/boj_serum_large.jpg"></a></div>
+                            <a class="h2" href="https://www.yesstyle.com/en/beauty-of-joseon-calming-serum-30ml/info.html/pid.1089210993">Beauty of Joseon Calming Serum</a>
+                            <p>$27 NZD</p>
+
+                        </div>
+
+                        <div class="product-box">
+                            <div class="image"><a href="https://www.cosmeticsmegastore.com/nz/albolene-moisturizing-cleanser-cream-fragrance-free-12-oz/p-28063505-81287319"><img src="images/dry/albolene_cleanser.jpeg"></a></div>
+                            <a class="h2" href="https://www.cosmeticsmegastore.com/nz/albolene-moisturizing-cleanser-cream-fragrance-free-12-oz/p-28063505-81287319">Albolene Moisturising Cleanser</a>
+                            <p>$48.95 NZD</p>
 
                         </div>
                     </div>
 
                     <div class="product-box" id="first">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.chemistwarehouse.co.nz/buy/60687/neutrogena-body-oil-light-sesame-250ml"><img src="images/dry/n_bodyoil.jpg"></a></div>
+                            <a class="h2" href="https://www.chemistwarehouse.co.nz/buy/60687/neutrogena-body-oil-light-sesame-250ml">Neutrogena Body Oil</a>
+                            <p>$13.49 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.houseofbeautyworld.com/nehybogecllo.html"><img src="images/dry/n_hydroboost_large.jpg"></a></div>
+                            <a class="h2" href="https://www.houseofbeautyworld.com/nehybogecllo.html">Neutrogena Hydro Boost Gentle Cleansing Lotion</a>
+                            <p>$20.50 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.ebay.com/p/7030526316"><img src="images/dry/cv_moisturiser_large.jpg"></a></div>
+                            <a class="h2" href="https://www.ebay.com/p/7030526316">CeraVe Moisturising Cream</a>
+                            <p>$28.75 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box" id="first">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                        <a class="h2" href="#">Product name</a>
-                        <p>Price</p>
+                        <div class="image"><a href="https://www.beautyangelnz.com/product-page/cerave-hydrating-mineral-sunscreen-with-spf30-sheer-tint"><img src="images/dry/cv_sunscreen_large.jpeg"></a></div>
+                            <a class="h2" href="https://www.beautyangelnz.com/product-page/cerave-hydrating-mineral-sunscreen-with-spf30-sheer-tint">CeraVe Hydrating Sunscreen SPF 30</a>
+                            <p>$35.99 NZD</p>
 
                     </div>
                 </div> 
@@ -135,7 +108,6 @@
                 </div>
                
             </div>
-
 		</div>
 
 		<footer>
