--- a/products-3.html
+++ b/products-3.html
@@ -33,95 +33,69 @@
 		
 		<div class="wrapper">
 			<div class="products">
-                <h1>All Products</h1>
+                <h1>Skincare Products</h1>
+                <p class="subheading">Products for combination skin</p>
 
                 <div class="container">
                     <!-- Each product-box div is a product, but this row specifically
                     has a thicker top box line -->
                     <div class="top-row">
                         <div class="product-box" id="first">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://beautybean.co.nz/nyx/5287-nyx-matte-blotting-paper-100-pure-pulp.html"><img src="images/combo/nyx_blottingpaper_large.jpg"></a></div>
+                            <a class="h2" href="https://beautybean.co.nz/nyx/5287-nyx-matte-blotting-paper-100-pure-pulp.html">NYZ Blotting Paper</a>
+                            <p>$12.50 NZD</p>
                         </div>
 
                         <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                        </div>
-
-                        <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://nz.iherb.com/pr/neutrogena-liquid-neutrogena-facial-cleansing-formula-8-fl-oz-236-ml/66618"><img src="images/combo/ng_liquidcleanser.jpg"></a></div>
+                            <a class="h2" href="https://nz.iherb.com/pr/neutrogena-liquid-neutrogena-facial-cleansing-formula-8-fl-oz-236-ml/66618">Neutrogena Liquid Cleanser</a>
+                            <p>$18.75 NZD</p>
 
                         </div>
 
                         <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://www.desertcart.nz/products/119786637-official-hada-labo-tokyo-gentle-hydrating-cleanser-150ml?"><img src="images/combo/hl_hydratingcleanser.jpg"></a></div>
+                            <a class="h2" href="https://www.desertcart.nz/products/119786637-official-hada-labo-tokyo-gentle-hydrating-cleanser-150ml?">Hada Labo Gentle Hydrating Cleanser</a>
+                            <p>$46 NZD</p>
+
+                        </div>
+
+                        <div class="product-box">
+                            <div class="image"><a href="https://www.sephora.nz/products/youth-to-the-people-superfood-cleanser/v/237ml"><img src="images/combo/yttp_antioxidant.jpg"></a></div>
+                            <a class="h2" href="https://www.sephora.nz/products/youth-to-the-people-superfood-cleanser/v/237ml">Youth To The People Superfood Antioxidant Cleanser </a>
+                            <p>$63 NZD</p>
 
                         </div>
                     </div>
 
                     <div class="product-box" id="first">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://nz.iherb.com/pr/cosrx-two-in-one-poreless-power-liquid-3-38-fl-oz-100-ml/84100"><img src="images/combo/crx_powerliquid.jpg"></a></div>
+                            <a class="h2" href="https://nz.iherb.com/pr/cosrx-two-in-one-poreless-power-liquid-3-38-fl-oz-100-ml/84100">COSRX Two in One Poreless Power Liquid</a>
+                            <p>$30.45 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.u-buy.co.nz/catalog/product/view/id/5382708/s/neutrogena-sheer-zinc-oxide-dry-touch-mineral-face-sunscreen-lotion-with-broad-spectrum-spf-50-oil-free-non-comedogenic-non-greasy-zinc-oxide-facial-sunscreen-hypoallergenic-2-fl-oz"><img src="images/combo/n_sheerzinc.jpeg"></a></div>
+                            <a class="h2" href="https://www.u-buy.co.nz/catalog/product/view/id/5382708/s/neutrogena-sheer-zinc-oxide-dry-touch-mineral-face-sunscreen-lotion-with-broad-spectrum-spf-50-oil-free-non-comedogenic-non-greasy-zinc-oxide-facial-sunscreen-hypoallergenic-2-fl-oz">Neutrogena Sheer Zinc Face Mineral Sunscreen SPF 50</a>
+                            <p>$29 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.mightyape.co.nz/product/cosrx-ahabha-clarifying-treatment-toner-150ml/28503611?gclid=CjwKCAjwndCKBhAkEiwAgSDKQZQSRS0HagYP98ACzEPBYXZZUcp63rFj_xbT3LZLJSXWnCYxtXgo1hoCvnYQAvD_BwE"><img src="images/combo/crx_treatmenttoner.jpg"></a></div>
+                            <a class="h2" href="https://www.mightyape.co.nz/product/cosrx-ahabha-clarifying-treatment-toner-150ml/28503611?gclid=CjwKCAjwndCKBhAkEiwAgSDKQZQSRS0HagYP98ACzEPBYXZZUcp63rFj_xbT3LZLJSXWnCYxtXgo1hoCvnYQAvD_BwE">COSRX AHA/BHA Clarifying Treatment Toner</a>
+                            <p>$21 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.sephora.nz/products/youth-to-the-people-superfood-air-whip-moisture-cream/v/default"><img src="images/combo/yttp_moisturiser.jpg"></a></div>
+                            <a class="h2" href="https://www.sephora.nz/products/youth-to-the-people-superfood-air-whip-moisture-cream/v/default">Youth To The People Superfood Air-Whip Moisturiser with Hyaluronic Acid </a>
+                            <p>$84 NZD</p>
 
                     </div>
 
-                    <div class="product-box" id="first">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                        <a class="h2" href="#">Product name</a>
-                        <p>Price</p>
-
-                    </div>
                 </div> 
 
                 <div class="nav-buttons">
@@ -135,7 +109,6 @@
                 </div>
                
             </div>
-
 		</div>
 
 		<footer>
